lustre/osc/lproc_osc.c
@@ -468,6 +468,39 @@ static ssize_t osc_resend_count_seq_write(struct file *file,
 }
 LPROC_SEQ_FOPS(osc_resend_count);
 
+static int osc_checksum_dump_seq_show(struct seq_file *m, void *v)
+{
+	struct obd_device *obd = m->private;
+
+	if (obd == NULL)
+		return 0;
+
+	seq_printf(m, "%d\n", obd->u.cli.cl_checksum_dump ? 1 : 0);
+	return 0;
+}
+
+static ssize_t osc_checksum_dump_seq_write(struct file *file,
+					   const char __user *buffer,
+					   size_t count, loff_t *off)
+{
+	struct obd_device *obd;
+	int rc;
+	__s64 val;
+
+	obd = ((struct seq_file *)file->private_data)->private;
+	if (obd == NULL)
+		return 0;
+
+	rc = lprocfs_str_to_s64(buffer, count, &val);
+	if (rc)
+		return rc;
+
+	obd->u.cli.cl_checksum_dump = (val ? 1 : 0);
+
+	return count;
+}
+LPROC_SEQ_FOPS(osc_checksum_dump);
+
 static int osc_contention_seconds_seq_show(struct seq_file *m, void *v)
 {
 	struct obd_device *obd = m->private;
@@ -624,6 +657,8 @@ struct lprocfs_vars lprocfs_osc_obd_vars[] = {
 	  .fops	=	&osc_checksum_fops		},
 	{ .name	=	"checksum_type",
 	  .fops	=	&osc_checksum_type_fops		},
+	{ .name	=	"checksum_dump",
+	  .fops	=	&osc_checksum_dump_fops		},
 	{ .name	=	"resend_count",
 	  .fops	=	&osc_resend_count_fops		},
 	{ .name	=	"timeouts",
